<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context="com.metacog.pc.metacog2k18.Events"
    android:padding="10dp"
    android:elevation="10dp"
    android:background="@drawable/back">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_gravity="center"
        android:elevation="10dp">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clipToPadding="false" >
            <android.support.v7.widget.CardView
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:id="@+id/c1"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                android:elevation="60dp"
                android:background="@drawable/background">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/fire"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:contentDescription="@string/coding"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:background="@drawable/circlebackgroundpurple"
                        android:src="@drawable/ic_code_black_24dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:text="@string/coding"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:id="@+id/c2"
                app:cardCornerRadius="10dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/fire"
                    android:orientation="vertical">
                    <ImageView
                        android:contentDescription="@string/gaming"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/circlebackgroundorange"
                        android:src="@drawable/ic_videogame_asset_black_24dp"
                        android:padding="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:text="@string/gaming"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clipToPadding="false">
            <android.support.v7.widget.CardView
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:id="@+id/c3"
                app:cardCornerRadius="10dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/fire"
                    android:orientation="vertical">
                    <ImageView
                        android:contentDescription="@string/others"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/circlebackgroundgreno"
                        android:src="@drawable/ic_more_horiz_black_24dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:text="@string/others"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="130dp"
                android:id="@+id/c4"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/fire"
                    android:orientation="vertical">
                    <ImageView
                        android:contentDescription="@string/fun"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/circlebackgroundyellow"
                        android:src="@drawable/ic_near_me_black_24dp"
                        android:padding="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:text="@string/fun"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clipToPadding="false">
            <android.support.v7.widget.CardView
                android:layout_width="130dp"
                app:cardCornerRadius="10dp"
                android:id="@+id/c5"
                android:layout_height="150dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/fire"
                    android:orientation="vertical">
                    <ImageView
                        android:contentDescription="@string/civil"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/circlebackgroundgreen"
                        android:src="@drawable/ic_build_black_24dp"
                        android:padding="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:text="@string/civil"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:id="@+id/c6"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/fire"
                    android:orientation="vertical">
                    <ImageView
                        android:contentDescription="@string/robotics"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/circlebackgroundpink"
                        android:src="@drawable/ic_sentiment_very_dissatisfied_black_24dp"
                        android:padding="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:text="@string/robotics"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</ScrollView>